--- a/RPQ/ConsoleApplication1.vcxproj.filters
+++ b/RPQ/ConsoleApplication1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="RPQ.cpp">
+    <ClCompile Include="ConsoleApplication1.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
