--- a/WITI/WITI.vcxproj.filters
+++ b/WITI/WITI.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WITI.cpp">
+    <ClCompile Include="WiTi.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
