--- a/Shrage/Shrage.vcxproj.filters
+++ b/Shrage/Shrage.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Shrage.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="Task.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Task.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
